--- a/src/tailwind.global.scss
+++ b/src/tailwind.global.scss
@@ -129,3 +129,7 @@ html, body {
   background-repeat: no-repeat;
   background-position: 0 -100px;
 }
+
+.tradingview-widget-copyright {
+    display: none;
+}
