--- a/src/global.scss
+++ b/src/global.scss
@@ -39,7 +39,7 @@ html, body {
     --destructive-foreground: 60 9.1% 97.8%;
     --success: 153 54% 48%; //#38BB7F
     --success-foreground: 60 9.1% 97.8%;
-    --border: 20 5.9% 90%;
+    --border: 198.75 21.05% 14.9%; // #1E292E
     --input: 20 5.9% 90%;
     --ring: 20 14.3% 4.1%;
     --radius: 0.5rem;
@@ -67,7 +67,7 @@ html, body {
     --accent-foreground: 60 9.1% 97.8%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 60 9.1% 97.8%;
-    --border: 12 6.5% 15.1%;
+    --border: 198.75 21.05% 14.9%;
     --input: 12 6.5% 15.1%;
     --ring: 35.5 91.7% 32.9%;
     --chart-1: 220 70% 50%;
