--- a/src/global.scss
+++ b/src/global.scss
@@ -18,7 +18,7 @@ html, body {
 @layer base {
   :root {
     --background: 0 0% 100%;
-    --foreground: 20 14.3% 4.1%;
+    --foreground: 220 13% 91%;
     --card: 226 33% 12%; //#151A2A
     --card-foreground: 20 14.3% 4.1%;
     --card-secondary: 240 29% 28%; //#33335C
@@ -35,9 +35,11 @@ html, body {
     --muted-foreground: 25 5.3% 44.7%;
     --accent: 60 4.8% 95.9%;
     --accent-foreground: 220 13% 91%; //#e5e7eb
+    --accent-secondary: 60 4.8% 95.9%;
+    --accent-secondary-foreground: 48 96% 53%; //#facc14
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 60 9.1% 97.8%;
-    --success: 153 54% 48%; //#38BB7F
+    --success: 142 70.56% 45.29%; //#21c45d
     --success-foreground: 60 9.1% 97.8%;
     --border: 198.75 21.05% 14.9%; // #1E292E
     --input: 20 5.9% 90%;
@@ -48,6 +50,7 @@ html, body {
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
+    --red-roulette:346 71% 54%;//#dd365d
   }
 
   .dark {
