Added roulette colors

--- a/src/global.scss
+++ b/src/global.scss
@@ -50,7 +50,9 @@ html, body {
     --chart-3: 197 37% 24%;
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
-    --red-roulette:346 71% 54%;//#dd365d
+    --red-roulette:346 71% 54%;//#dd365d;
+    --black-roulette:198.75 21.05% 14.9%;//#1e292e;
+    --green-roulette:152.52 53.91% 47.65%;//#38BB7F;
   }
 
   .dark {
