Added new colors

--- a/src/global.scss
+++ b/src/global.scss
@@ -53,6 +53,7 @@ html, body {
     --red-roulette:346 71% 54%;//#dd365d;
     --black-roulette:198.75 21.05% 14.9%;//#1e292e;
     --green-roulette:152.52 53.91% 47.65%;//#38BB7F;
+    --bonus:217.22 91.22% 59.8%;//#3b82f6
   }
 
   .dark {
